--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'No build step required'",
     "vercel-build": "npm install && npm run build"
   },
   "keywords": [],
